--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,25 @@ services:
     container_name: facade-container
     environment:
       - USERS_URL=http://users:5432/
+      - POSTS_URL=http://posts:5432/
       - PORT=5432
       - PYTHONUNBUFFERED=1
     ports:
       - 8080:5432
     depends_on:
       - users
+    networks:
+      - my_network
+
+  posts:
+    build: ../posts-server
+    container_name: posts-container
+    environment:
+      - DATABASE_URL=postgres://postgres:postgres@psql-container:5432/postgres
+      - PORT=5432
+      - PYTHONUNBUFFERED=1
+    depends_on:
+      - postgres
     networks:
       - my_network
 
