expose payments port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,7 +30,6 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@psql-container:5432/postgres
       - PAYMENTS_URL=http://payments:5432/
       - PORT=5432
-      - PYTHONUNBUFFERED=1
     depends_on:
       - postgres
     networks:
@@ -43,7 +42,8 @@ services:
     environment:
       - DATABASE_URL=postgres://postgres:postgres@psql-container:5432/postgres
       - PORT=5432
-      - PYTHONUNBUFFERED=1
+    ports:
+      - 3000:5432
     depends_on:
       - postgres
     networks:
