--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ inflection==0.3.1
 itsdangerous==1.1.0
 Jinja2==2.10.1
 jsonschema==2.6.0
+newrelic
 MarkupSafe==1.1.1
 openapi-spec-validator==0.2.8
 PyYAML==5.1.2
